function call exercise

--- a/simple-function-call.ipynb
+++ b/simple-function-call.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "84101729",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +14,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4e09a31b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "aa42edac",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "8e3beba0",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_conversation(days_input):\n",
     "    # Step 1: send the conversation and available functions to GPT\n",
-    "    messages = [{\"role\": \"user\", \"content\": \"What day of week is it {} after today?\".format(days_input)}]\n",
+    "    messages = [{\"role\": \"user\", \"content\": \"{}\".format(days_input)}]\n",
     "    functions = [\n",
     "        {\n",
     "            \"name\": \"get_day_of_week\",\n",
@@ -54,7 +50,7 @@
     "                \"type\": \"object\",\n",
     "                \"properties\": {\n",
     "                    \"days_ahead\": {\n",
-    "                        #\"type\": \"int\",\n",
+    "                        \"type\": \"integer\",\n",
     "                        \"description\": \"The number of days after the system's current time\",\n",
     "                    }\n",
     "                },\n",
@@ -100,13 +96,16 @@
     "            messages=messages,\n",
     "            temperature=0.0,\n",
     "        )  # get a new response from GPT where it can see the function response\n",
-    "        return second_response"
+    "    \n",
+    "    else:\n",
+    "        second_response = response\n",
+    "    \n",
+    "    return second_response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "2cf40c72",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -121,34 +120,33 @@
       "      \"message\": {\n",
       "        \"content\": null,\n",
       "        \"function_call\": {\n",
-      "          \"arguments\": \"{\\n  \\\"days_ahead\\\": 10\\n}\",\n",
+      "          \"arguments\": \"{\\n  \\\"days_ahead\\\": 0\\n}\",\n",
       "          \"name\": \"get_day_of_week\"\n",
       "        },\n",
       "        \"role\": \"assistant\"\n",
       "      }\n",
       "    }\n",
       "  ],\n",
-      "  \"created\": 1687062651,\n",
-      "  \"id\": \"chatcmpl-7SeLrSEJvV3lnAnpiKbGsHiZdMUKz\",\n",
+      "  \"created\": 1687386072,\n",
+      "  \"id\": \"chatcmpl-7U0UKlYPx7QfP9leD924xTRqgMC0H\",\n",
       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
       "  \"object\": \"chat.completion\",\n",
       "  \"usage\": {\n",
       "    \"completion_tokens\": 19,\n",
-      "    \"prompt_tokens\": 79,\n",
-      "    \"total_tokens\": 98\n",
+      "    \"prompt_tokens\": 73,\n",
+      "    \"total_tokens\": 92\n",
       "  }\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "response1 = run_conversation('10 days')"
+    "response1 = run_conversation('What day is it today?')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "ffc08210",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -161,19 +159,19 @@
       "      \"finish_reason\": \"stop\",\n",
       "      \"index\": 0,\n",
       "      \"message\": {\n",
-      "        \"content\": \"10 days after today is Tuesday.\",\n",
+      "        \"content\": \"Today is Wednesday.\",\n",
       "        \"role\": \"assistant\"\n",
       "      }\n",
       "    }\n",
       "  ],\n",
-      "  \"created\": 1687062652,\n",
-      "  \"id\": \"chatcmpl-7SeLsvmsSSgVanl2fHdhQaZAY0GqG\",\n",
+      "  \"created\": 1687386073,\n",
+      "  \"id\": \"chatcmpl-7U0ULlPrBrPBAoN4gwOTlur68oMHE\",\n",
       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
       "  \"object\": \"chat.completion\",\n",
       "  \"usage\": {\n",
-      "    \"completion_tokens\": 7,\n",
-      "    \"prompt_tokens\": 49,\n",
-      "    \"total_tokens\": 56\n",
+      "    \"completion_tokens\": 4,\n",
+      "    \"prompt_tokens\": 43,\n",
+      "    \"total_tokens\": 47\n",
       "  }\n",
       "}\n"
      ]
@@ -185,15 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "743ae95b",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 days after today is Tuesday.\n"
+      "Today is Wednesday.\n"
      ]
     }
    ],
@@ -203,8 +200,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"finish_reason\": \"function_call\",\n",
+      "      \"index\": 0,\n",
+      "      \"message\": {\n",
+      "        \"content\": null,\n",
+      "        \"function_call\": {\n",
+      "          \"arguments\": \"{\\n  \\\"days_ahead\\\": 11\\n}\",\n",
+      "          \"name\": \"get_day_of_week\"\n",
+      "        },\n",
+      "        \"role\": \"assistant\"\n",
+      "      }\n",
+      "    }\n",
+      "  ],\n",
+      "  \"created\": 1687385755,\n",
+      "  \"id\": \"chatcmpl-7U0PDk4Je7UMHBwEWrIesygE4s7Ue\",\n",
+      "  \"model\": \"gpt-3.5-turbo-0613\",\n",
+      "  \"object\": \"chat.completion\",\n",
+      "  \"usage\": {\n",
+      "    \"completion_tokens\": 19,\n",
+      "    \"prompt_tokens\": 76,\n",
+      "    \"total_tokens\": 95\n",
+      "  }\n",
+      "}\n",
+      "11 days from now will be a Sunday.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(run_conversation('What day is 11 days from now?')['choices'][0]['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"finish_reason\": \"stop\",\n",
+      "      \"index\": 0,\n",
+      "      \"message\": {\n",
+      "        \"content\": \"San Francisco is located in the state of California, on the west coast of the United States.\",\n",
+      "        \"role\": \"assistant\"\n",
+      "      }\n",
+      "    }\n",
+      "  ],\n",
+      "  \"created\": 1687386107,\n",
+      "  \"id\": \"chatcmpl-7U0UttkrAd9PmJZdZEqKotRz7LQSt\",\n",
+      "  \"model\": \"gpt-3.5-turbo-0613\",\n",
+      "  \"object\": \"chat.completion\",\n",
+      "  \"usage\": {\n",
+      "    \"completion_tokens\": 20,\n",
+      "    \"prompt_tokens\": 73,\n",
+      "    \"total_tokens\": 93\n",
+      "  }\n",
+      "}\n",
+      "San Francisco is located in the state of California, on the west coast of the United States.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(run_conversation('Where is San Francisco located?')['choices'][0]['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"choices\": [\n",
+      "    {\n",
+      "      \"finish_reason\": \"function_call\",\n",
+      "      \"index\": 0,\n",
+      "      \"message\": {\n",
+      "        \"content\": null,\n",
+      "        \"function_call\": {\n",
+      "          \"arguments\": \"{\\n  \\\"days_ahead\\\": 731\\n}\",\n",
+      "          \"name\": \"get_day_of_week\"\n",
+      "        },\n",
+      "        \"role\": \"assistant\"\n",
+      "      }\n",
+      "    }\n",
+      "  ],\n",
+      "  \"created\": 1687386116,\n",
+      "  \"id\": \"chatcmpl-7U0V2nVICrcCQoXZFutRvEMq1ddlq\",\n",
+      "  \"model\": \"gpt-3.5-turbo-0613\",\n",
+      "  \"object\": \"chat.completion\",\n",
+      "  \"usage\": {\n",
+      "    \"completion_tokens\": 19,\n",
+      "    \"prompt_tokens\": 77,\n",
+      "    \"total_tokens\": 96\n",
+      "  }\n",
+      "}\n",
+      "October 12, 2023 falls on a Saturday.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(run_conversation('What day is October 12, 2023')['choices'][0]['message']['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5ddad3fa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -226,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
