simple REACT prompt pattern

--- a/search-summarize-news.ipynb
+++ b/search-summarize-news.ipynb
@@ -26,13 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Recently, the Federal Reserve paused its interest rate hikes but signaled that more tightening could be coming in the future. This decision has received mixed commentary, with some economists speculating that it could be a \"bluff\" or a \"skip.\" The Fed has also been criticized for its handling of inflation, with figures like Elon Musk and Mohamed El-Erian speaking out against the central bank's policies. Additionally, a World Bank report has warned that the Fed's fight against inflation could have global economic consequences. For more information, see [this article](https://markets.businessinsider.com/news/stocks/fed-elon-musk-el-erian-siegel-rosenberg-inflation-interest-rates-2023-5) and [this one](https://finance.yahoo.com/news/federal-reserve-economists-mixed-on-whether-fed-pause-is-a-bluff-or-a-skip-204727069.html)."
+       "Putin's regime has been profoundly shaken after the coup attempt by the Wagner mercenary company and its leader, Yevgeny Prigozhin. While Putin has tried to show that he is firmly in control, Russia's elite is unsure of his actual level of control. The Kremlin has released footage of Putin being greeted by adoring crowds in the street and attending a tech exhibition for Russian companies in Moscow, but there is ongoing debate about the stability of his rule. Some experts argue that Putin's rule was never truly threatened, but Putin's actions suggest otherwise. \n",
+       "\n",
+       "To learn more about Putin's struggles to recover from the coup attempt, you can read the following articles:\n",
+       "\n",
+       "1. [Putin’s regime struggles to recover from coup attempt, says political analyst](https://news.yahoo.com/putin-regime-struggles-recover-coup-134000506.html)\n",
+       "2. [Vladimir Putin Claims He's Back in Control. Russia's Elite Isn't Sure](https://www.ndtv.com/world-news/vladimir-putin-claims-hes-back-in-control-russias-elite-isnt-sure-4165442)\n",
+       "3. [What experts make of Putin’s rare public appearances after failed coup](https://www.semafor.com/article/06/29/2023/experts-putin-rare-public-appearances)\n",
+       "4. [After the rebellion, how well will Putin carry on his rule?](https://news.yahoo.com/rebellion-well-putin-carry-rule-174700716.html)\n",
+       "5. [The Russian coup-that-wasn’t fell flat. The next one might not | Rajan Menon and Daniel R DePetris](https://www.theguardian.com/global/commentisfree/2023/jun/28/russian-coup-vladimir-putin-wagner-ukraine-war)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -49,7 +57,7 @@
     "GPT_MODEL = \"gpt-3.5-turbo\"\n",
     "\n",
     "# User asks a question\n",
-    "USER_QUESTION = \"Recap actions the Federal Reserve took recently and surrounding commentary\"\n",
+    "USER_QUESTION = \"How is Putin doing after the coup attempt?\"\n",
     "\n",
     "# Helper functions\n",
     "def json_gpt(input: str):\n",
@@ -98,8 +106,8 @@
     "    query: str,\n",
     "    news_api_key: str = news_api_key,\n",
     "    num_articles: int = 50,\n",
-    "    from_datetime: str = \"2023-05-21\", \n",
-    "    to_datetime: str = \"2023-06-16\",\n",
+    "    from_datetime: str = \"2023-06-21\", \n",
+    "    to_datetime: str = \"2023-07-15\",\n",
     ") -> dict:\n",
     "    response = requests.get(\n",
     "        \"https://newsapi.org/v2/everything\",\n",
@@ -193,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The Federal Reserve made several moves recently to stabilize the economy. According to commentary from experts, these actions were seen as necessary but controversial. Some argued that NAME, a prominent economist, had warned about the potential risks of these actions at a conference in PLACE. However, others praised the Federal Reserve for taking bold steps to prevent a recession.'"
+       "\"After the coup attempt, Putin managed to successfully regain control of the government. He implemented several reforms to stabilize the country and strengthen his position. Putin's popularity soared as he was seen as a strong leader who protected the nation's interests. He continued to prioritize economic growth and modernization, leading to significant advancements in various sectors. Overall, Putin's leadership after the coup attempt has been widely regarded as successful and has solidified his position as a dominant figure in Russian politics.\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
